# AINovel

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  MIGRATION_PLAN.md  POC_ARCHITECTURE.md  POC_VALIDATION_REPORT.md  PROJECT_STRUCTURE.md  README.md  TODO.md  WORK_PLAN.md  check_db.py  docker-compose.override.yml  docker-compose.yml  test_db_insert.py
backend/: .dockerignore  .env.example  BACKEND_REFACTOR_TODO.md  DEVELOPMENT_LOG.md  Dockerfile  alembic.ini  auth.py  database.py  docker-compose.yml  knowledge_models.py  langchain_service.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  schemathesis.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline_schema.py  0002_ai_runtime_tables.py  0003_foreign_key_indexes.py  0004_token_blacklist.py  0005_扩展modelconfig表新增scenarios字段.py  0006_chapter_tiered_summary.py  0007_新增知识图谱提案基础表.py  0008_补全知识图谱数据完整性.py  8143bb525516_add_unique_constraint_for_chapter_.py  95ec18802f56_initial_migration.py  9b1a9dddde19_add_word_count_and_chapter_count_to_.py  a8f033bea24c_扩展prompttemplate表支持提示词管理功能.py  b3e7a1c9d042_扩展character表新增角色参数字段.py  d9f7c1b2e4aa_扩展character表新增extra_attributes字段.py  f0b36e979082_add_llm_parameters_to_model_config.py  knowledge_base_tables.py  (+1 more)
backend/app/: main.py
backend/docs/: PHASE0_BASELINE.md
backend/routers/: __init__.py  auth.py  chapters.py  characters.py  drafts.py  knowledge.py  langchain_ai.py  locations.py  model_configs.py  organizations.py  projects.py  prompt_templates.py  worldviews.py
backend/scripts/: README.md
backend/tests/: conftest.py
(+315 files in other folders)
